keep document body on website readable on some browsers by preventing it from disappearing behind the side menu

--- a/doc/html/style.css
+++ b/doc/html/style.css
@@ -6,7 +6,7 @@ body {
 @media screen and (min-width: 960px) and (min-height: 720px) and (max-resolution: 150dpi),
        screen and (min-width: 1280px) and (min-height: 720px) {
     body {
-        padding: 1em 1em 1em 22em;
+        padding: 1em 3em 1em 26em;
     }
 }
 
@@ -20,7 +20,7 @@ body {
 @media print {
     div.document, div.footer {
         width: auto;
-        padding-left: 0px;
+        padding-left: 0;
     }
 
     div.sidemenu {
